<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:background="@color/prof_blue">

        <RelativeLayout
            android:orientation="vertical"
            android:id="@+id/relativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/TopPic"
                android:layout_width="match_parent"
                android:layout_height="441dp"
                android:background="@drawable/beachpic"
                android:scaleType="fitXY" />
            <TextView
                android:id="@+id/Name_Home"
                android:layout_below="@id/TopPic"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                style="@android:style/TextAppearance.Large"
                android:text="@string/Name_Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Fav_prog"
                android:layout_below="@id/Name_Home"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                style="@android:style/TextAppearance.Large"
                android:text="@string/Fav_prog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Hobbies"
                android:layout_below="@id/Fav_prog"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                style="@android:style/TextAppearance.Large"
                android:text="@string/Hobbies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Fav_food"
                android:layout_below="@id/Hobbies"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                style="@android:style/TextAppearance.Large"
                android:text="@string/Fav_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Fun_fact"
                android:layout_below="@id/Fav_food"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                style="@android:style/TextAppearance.Large"
                android:text="@string/Fun_fact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/LinkdInButton"
                android:backgroundTint="@color/button_yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/Fun_fact"
                android:textColor="@color/prof_blue"
                android:text="@string/LinkdIn"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="onWebClick"/>
            <Button
                android:id="@+id/ReturnButton"
                android:backgroundTint="@color/button_yellow"
                android:textColor="@color/prof_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LinkdInButton"
                android:text="@string/ReturnButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="onReturnClick"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="438dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/ReturnButton"
                android:layout_alignParentBottom="true"
                android:background="@drawable/fampic" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>